end my suffixing

--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -238,12 +238,12 @@
       CornerWalls: WallReinforced
       Walls: WallSolid
     spawnGroups:
-      CornerClutter: BaseClutterNF
-      Entrance: BaseAirlockNF
-      EntranceFlank: BaseWindowNF
-      Junction: BaseAirlockNF
+      CornerClutter: NFBaseClutter
+      Entrance: NFBaseAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
       WallMounts: NFCaveFactoryWallMounts
-      Window: BaseWindowNF
+      Window: NFBaseWindow
     tiles:
       FallbackTile: FloorSteel
     whitelists:
@@ -276,12 +276,12 @@
       CornerWalls: WallReinforced
       Walls: WallSolid
     spawnGroups:
-      CornerClutter: BaseClutterNF
-      Entrance: BaseAirlockNF
-      EntranceFlank: BaseWindowNF
-      Junction: BaseAirlockNF
+      CornerClutter: NFBaseClutter
+      Entrance: NFBaseAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
       WallMounts: NFMedSciWallMounts
-      Window: BaseWindowNF
+      Window: NFBaseWindow
     tiles:
       FallbackTile: FloorSteel
     whitelists:
@@ -301,12 +301,12 @@
       CornerWalls: WallReinforced
       Walls: WallSolid
     spawnGroups:
-      CornerClutter: BaseClutterNF
-      Entrance: BaseAirlockNF
-      EntranceFlank: BaseWindowNF
-      Junction: BaseAirlockNF
-      WallMounts: BaseWallMountsNF
-      Window: BaseWindowNF
+      CornerClutter: NFBaseClutter
+      Entrance: NFBaseAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
+      WallMounts: NFBaseWallmounts
+      Window: NFBaseWindow
     tiles:
       FallbackTile: FloorSteel
     whitelists:
