Fix factory wallmounts

--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -305,7 +305,7 @@
       Entrance: NFBaseAirlock
       EntranceFlank: NFBaseWindow
       Junction: NFBaseAirlock
-      WallMounts: NFBaseWallmounts
+      WallMounts: NFBaseWallMounts
       Window: NFBaseWindow
     tiles:
       FallbackTile: FloorSteel
