god awful config colours, destroy diamond

--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -232,7 +232,7 @@
   id: NFCaveFactory
   data:
     colors:
-      Decals: "#ffa64d96"
+      Decals: "#ab803bff"
     entities:
       Cabling: CableApcExtension
       CornerWalls: WallReinforced
@@ -296,6 +296,8 @@
 - type: dungeonConfig
   id: NFFactoryDorms
   data:
+    colors:
+      Decals: "#efb34196"
     entities:
       Cabling: CableApcExtension
       CornerWalls: WallReinforced
@@ -308,7 +310,7 @@
       WallMounts: NFBaseWallMounts
       Window: NFBaseWindow
     tiles:
-      FallbackTile: FloorSteel
+      FallbackTile: FloorDark
     whitelists:
       Rooms:
         tags:
