SalvageOutpost, MedSci touchups

--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -271,6 +271,8 @@
 - type: dungeonConfig
   id: NFMedSci
   data:
+    colors:
+      Decals: "#D381C996"
     entities:
       Cabling: CableApcExtension
       CornerWalls: WallReinforced
@@ -283,7 +285,7 @@
       WallMounts: NFMedSciWallMounts
       Window: NFBaseWindow
     tiles:
-      FallbackTile: FloorSteel
+      FallbackTile: FloorWhite
     whitelists:
       Rooms:
         tags:
@@ -390,7 +392,7 @@
       WallMounts: NFBaseWallMounts
       Window: NFMiningWindow
     tiles:
-      FallbackTile: FloorMining
+      FallbackTile: FloorDark
     whitelists:
       Rooms:
         tags:
