--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -176,8 +176,7 @@
     nameSegments: [names_cat_clugg]
   - type: NpcFactionMember
     factions:
-      - Cat
-      - DinosaursNF
+      - Cat # Everybody loves Clugg. Maybe not pitbulls.
   - type: NFSalvageMobRestrictions
     despawnIfOffLinkedGrid: false
     addComponentsOnDeath: []
