--- a/Resources/Prototypes/_NF/ai_factions.yml
+++ b/Resources/Prototypes/_NF/ai_factions.yml
@@ -165,7 +165,7 @@
   - MercenariesExpeditionNF
   - SiliconsExpeditionNF
   - AberrantFleshExpeditionNF
-  - ContrabandClothing
+  # - ContrabandClothing
   - ContrabandDetection
 
 - type: npcFaction
@@ -411,30 +411,6 @@
 - type: npcFaction
   id: ContrabandDetection
   hostile:
-  ## SS14 factions
-  #- NanoTrasen
-  - Syndicate
-  - SimpleHostile
-  #- SimpleNeutral
-  #- Passive
-  #- PetsNT
-  - Zombie
-  - Revolutionary
-  - Xeno
-  ## Frontier Factions
-  #- Monkey
-  #- Goblin
-  - SyndicateNF
-  - WizFedFaction
-  - BloodCultNF
-  - PirateNF
-  - ExplorersExpeditionNF
-  - ArtifactConstruct
-  - StreetGangNF
-  - DinosaursNF
-  - MercenariesExpeditionNF
-  - SiliconsExpeditionNF
-  - AberrantFleshExpeditionNF
   - ContrabandClothing
 
 - type: npcFaction
