Cappy can into NT

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -136,7 +136,7 @@
   - type: NpcFactionMember
     factions:
       - Cat
-      - PetsNT
+      - NanoTrasen
   - type: Speech
     speechSounds: NfsdCat
     speechVerb: SmallMob
