Cat accents, "it" is a valid caveman word

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -87,6 +87,12 @@
       - Cat
       - PirateNF
   - type: CargoSellBlacklist
+  - type: PirateAccent
+  - type: Speech
+    audioParams:
+      volume: -2
+      rolloffFactor: 4.5
+      pitch: 0.7
 
 - type: entity
   name: Cappy
@@ -151,6 +157,7 @@
   - type: CargoSellBlacklist
   - type: PirateBountyItem
     id: Cappy
+  - type: SouthernAccent
 
 - type: entity
   name: Clugg
@@ -181,6 +188,7 @@
     despawnIfOffLinkedGrid: false
     addComponentsOnDeath: []
     removeComponentsOnDeath: []
+  - type: CavemanAccent
 
 - type: entity
   name: Mistake
