localized dementia typos

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/healing.yml
@@ -23,7 +23,7 @@
   description: Take two pills daily.
   components:
   - type: Label
-    currentLabel: clarpy dimantia pills
+    currentLabel: medicine-label-mannitol-clarpy
   - type: StorageFill
     contents:
     - id: NFPillMannitol
