--- a/Resources/Prototypes/_NF/Roles/Ghostroles/whitelisted.yml
+++ b/Resources/Prototypes/_NF/Roles/Ghostroles/whitelisted.yml
@@ -49,6 +49,14 @@
   whitelisted: true
 
 - type: ghostRole
+  id: CatCult
+  name: ghost-role-information-cult-cat-name
+  description: ghost-role-information-cult-cat-description
+  rules:  ghost-role-information-emotional-support-rules
+  entityPrototype: MobCatCult
+  whitelisted: true
+
+- type: ghostRole
   id: MonkeyPunpun
   name: ghost-role-information-punpun-name
   description: ghost-role-information-punpun-description
