--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -36,6 +36,7 @@
   - ShipyardLoader
   - ShipyardMcCargo
   - ShipyardMcDelivery
+  - ShipyardMetastable
   - ShipyardPathfinder
   - ShipyardPhoenix
   - ShipyardPioneer
@@ -207,6 +208,11 @@
   id: ShipyardMcDelivery
   name: guide-entry-shipyard-mcdelivery
   text: "/ServerInfo/_NF/Guidebook/Shipyard/McDelivery.xml"
+  
+- type: guideEntry
+  id: ShipyardMetastable
+  name: guide-entry-shipyard-metastable
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Metastable.xml"
 
 - type: guideEntry
   id: ShipyardPathfinder
