--- a/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
@@ -240,6 +240,18 @@
 
 - type: entity
   parent: PosterBase
+  id: ShuttleMapMetastable
+  name: "TCI Metastable II"
+  description: "Detailed map of a Metastable II flagship."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: metastable
+    scale: 1.2, 1.2
+
+- type: entity
+  parent: PosterBase
   id: ShuttleMapLantern
   name: "NC Lantern"
   description: "Detailed map of a Lantern shuttle."
